@@ -3,6 +3,9 @@ git-annex (8.20201104) UNRELEASED; urgency=medium
   * sync --content: Fix a bug where a file that was not preferred content
     could be transferred to a remote. This happened when the file got deleted
     after the sync started running.
+  * Warn when adding a annex symlink or pointer file that uses a key that
+    is not known to the repository, to prevent confusion if the user has
+    copied it from some other repository.
 
  -- Joey Hess <id@joeyh.name>  Mon, 09 Nov 2020 15:15:20 -0400
 
